<resources>
    <string name="app_name">BusinessAssistant</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="terminos">Terminos y condiciones</string>
    <string name="registrate">Registrate</string>
    <string name="digitar_nombre">Digite su nombre</string>
    <string name="digitar_correo">Digite su correo</string>
    <string name="digitar_rcontrasena">Repita contraseña</string>
    <string name="rb1">Masculino</string>
    <string name="rb2">Femenino</string>
    <string name="tv_fecha">Fecha de nacimiento:</string>
    <string name="hint_fecha">dd/mm/yy</string>
    <string name="registrar">"Registrarse "</string>
    <string name="menu_cerrarsesion">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregar_cliente">Agregar</string>
    <string name="direccion_cliente">Dirección</string>
    <string name="celular_cliente">Celular</string>
    <string name="nuevo_cliente">Nuevo cliente</string>
    <string name="inventario">Inventario</string>
    <string name="Clientes">Clientes</string>
    <string name="titl_Inventario">Inventario</string>
    <string name="title_Compras">Compras</string>
    <string name="nuevo_elemento">Nuevo elemento</string>
    <string name="tipo_elemento">Tipo de elemento</string>
    <string name="rb1_producto">Producto</string>
    <string name="rb2_servicio">Servicio</string>
    <string name="tv_nombre_del_elemento">"Nombre del nuevo elemento "</string>
    <string name="name_elemento">Nombre del elemento</string>
    <string name="scannerQR">Scanner QR</string>
    <string name="tv_unit">Unidad</string>
    <string name="unit">Ingrese las unidades</string>
    <string name="description">Descripción</string>
    <string name="descripcion">Escriba aquí la descripción del producto</string>
    <string name="precio">Precio</string>
    <string name="dig_precio">Digite el precio</string>
    <string name="add">Añadir</string>
    <string name="cancel">Cancelar</string>
    <string name="borrar">Borrar</string>
    <string name="nombre">Digite nombre</string>
    <string name="buscar_cliente">Buscar</string>
    <string name="digite_nom_cliente">Digite nombre</string>
    <string name="buscar">Buscar</string>
    <string name="nuevo_telefono">Nuevo Telefono</string>
    <string name="correo_actulizado">Digite nuevo correo</string>
    <string name="nueva_direccion">Digite nueva dirección</string>
    <string name="actualizar">Actualizar</string>
    <string name="buscar_cliente_f">Buscar cliente</string>
    <string name="eliminar_cliente_f">Eliminar Cliente</string>
    <string name="Actualizar_cliente_f">Actualizar cliente</string>
    <string name="nuevo_cliente_f">Nuevo cliente</string>
    <string name="total">Total a pagar</string>
    <string name="pagar">Pagar</string>
    <string name="compras">Seleccionar productos</string>
    <string name="elegir">Elegir un cliente</string>
    <string name="titulo_resgistrarcompra">Registrar Compra</string>
    <string name="title_maps">Maps</string>
    <string name="tittle_maps">Maps</string>
    <string name="nuevo_producto">Nuevo producto</string>
</resources>