<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_clientes">

    <fragment
        android:id="@+id/navigation_clientes"
        android:name="com.teo.businessassistant.ui.Clientes.ClientesFragment"
        android:label="@string/Clientes"
        tools:layout="@layout/fragment_clientes" >
        <action
            android:id="@+id/next_to_nuevocliente"
            app:destination="@id/navigation_nuevocliente" />
        <action
            android:id="@+id/next_to_actualizarcliente"
            app:destination="@id/navigation_actualizarcliente" />
        <action
            android:id="@+id/next_to_buscarcliente"
            app:destination="@id/navigation_buscarcliente" />
        <action
            android:id="@+id/next_to_eliminarcliente"
            app:destination="@id/navigation_eliminarcliente" />
    </fragment>

    <fragment
        android:id="@+id/navigation_inventario"
        android:name="com.teo.businessassistant.ui.Inventario.InventarioFragment"
        android:label="@string/inventario"
        tools:layout="@layout/fragment_inventario" >
        <action
            android:id="@+id/next_to_nuevoproducto"
            app:destination="@id/navigation_nuevoproducto" />
    </fragment>

    <fragment
        android:id="@+id/navigation_compras"
        android:name="com.teo.businessassistant.ui.Compras.ComprasFragment"
        android:label="@string/title_Compras"
        tools:layout="@layout/fragment_compras" />
    <fragment
        android:id="@+id/navigation_nuevocliente"
        android:name="com.teo.businessassistant.Fragments.NuevoclienteFragment"
        android:label="@string/nuevo_cliente_f"
        tools:layout="@layout/fragment_nuevocliente" />
    <fragment
        android:id="@+id/navigation_nuevoproducto"
        android:name="com.teo.businessassistant.Fragments.NuevoproductoFragment"
        android:label="fragment_nuevoproducto"
        tools:layout="@layout/fragment_nuevoproducto" />
    <fragment
        android:id="@+id/navigation_actualizarcliente"
        android:name="com.teo.businessassistant.Fragments.ActualizarclienteFragment"
        android:label="@string/Actualizar_cliente_f"
        tools:layout="@layout/fragment_actualizarcliente" />
    <fragment
        android:id="@+id/navigation_buscarcliente"
        android:name="com.teo.businessassistant.Fragments.BuscarclienteFragment"
        android:label="@string/buscar_cliente_f"
        tools:layout="@layout/fragment_buscarcliente" />
    <fragment
        android:id="@+id/navigation_eliminarcliente"
        android:name="com.teo.businessassistant.Fragments.EliminarclienteFragment"
        android:label="@string/eliminar_cliente_f"
        tools:layout="@layout/fragment_eliminarcliente" />
</navigation>