<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.ActualizarclienteFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nombre3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_buscar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form_bt_circle"
        android:text="@string/buscar"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nuevotelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nuevo_telefono" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_correoactual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_actulizado" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nueva_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nueva_direccion" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_actualizarcliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form_bt_circle"
        android:text="@string/actualizar"
        android:textColor="@color/black" />

</LinearLayout>