<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.NuevoproductoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"

        android:padding="8dp"
        tools:context=".RegistroActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarTrackVertical="@color/chocolate"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_nuevocliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/nunito_extralight"
                    android:text="@string/nuevo_elemento"
                    android:textAlignment="center"
                    android:textColor="@color/chocolate"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/nunito_extralight"
                    android:text="@string/tipo_elemento"
                    android:textColor="@color/business"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <RadioGroup
                        android:layout_width="342dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rb_producto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="16dp"
                            android:checked="true"
                            android:fontFamily="@font/nunito_extralight"
                            android:text="@string/rb1_producto" />

                        <RadioButton
                            android:id="@+id/rb_servivio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:checked="false"
                            android:fontFamily="@font/nunito_extralight"
                            android:text="@string/rb2_servicio" />

                    </RadioGroup>

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="86dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/form_bt_circle"
                        android:src="@android:drawable/ic_menu_camera" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/nunito_extralight"
                    android:text="@string/tv_nombre_del_elemento"
                    android:textColor="@color/business"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/et_elemento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/form_bt_circle"
                    android:fontFamily="@font/nunito_extralight"
                    android:hint="@string/name_elemento"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:autofillHints="" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_QR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/nunito_extralight"
                        android:text="@string/scannerQR"
                        android:textAlignment="gravity"
                        android:textColor="@color/business"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/iv_scanner"
                        android:layout_width="86dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/form_bt_circle"
                        android:src="@drawable/ic_scanqr" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/nunito_extralight"
                    android:text="@string/tv_unit"
                    android:textColor="@color/business"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/et_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/form_bt_circle"
                    android:fontFamily="@font/nunito_extralight"
                    android:hint="@string/unit"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:autofillHints=""
                    android:inputType="number" />

                <TextView
                    android:id="@+id/tv_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/nunito_extralight"
                    android:text="@string/description"
                    android:textColor="@color/business"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/et_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/form_bt_circle"
                    android:fontFamily="@font/nunito_extralight"
                    android:hint="@string/descripcion"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/tv_precio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/nunito_extralight"
                    android:text="@string/precio"
                    android:textColor="@color/business"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/et_precio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/form_bt_circle"
                    android:fontFamily="@font/nunito_extralight"
                    android:hint="@string/dig_precio"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:autofillHints=""
                    android:inputType="number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/bt_add"
                        android:text="@string/add"
                        android:textColor="@color/white">

                    </Button>
                    w


                    <Button
                        android:id="@+id/bt_cancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/bt_cancelar"
                        android:text="@string/cancel">

                    </Button>

                </LinearLayout>



            </LinearLayout>


        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
