<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Compras.ComprasFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/tv_resgistrarcompra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/titulo_resgistrarcompra"
            android:textColor="@color/business"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_elegir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/elegir"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_resgistrarcompra" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="369dp"
            android:layout_height="57dp"
            android:layout_marginTop="4dp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_elegir">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_elegircliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/clientes_item" />

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/bt_compras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_compras"
            android:drawableLeft="@drawable/ic_cart"
            android:text="@string/compras"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView2"
            android:layout_width="370dp"
            android:layout_height="136dp"
            android:layout_marginTop="6dp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_compras">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_listacompras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/inventario_item" />

        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/total"
            android:textSize="18sp"
            android:textColor="@color/business"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView2" />

        <TextView
            android:id="@+id/precio_pago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total" />

        <Button
            android:id="@+id/bt_pagar"
            android:layout_width="184dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/form_bt_circle"
            android:text="@string/pagar"
            android:textColor="@color/business"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/precio_pago" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>